<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qt6_ros2_template</name>
  <version>0.1.0</version>
  <description>Qt6 ROS2 Template Package</description>
  <maintainer email="hoshizoranihon@gmail.com">hoshizora</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>qt_gui_cpp</depend>
  <depend>pluginlib</depend>

  <!-- Add additional dependencies here -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>